--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <p>2023 - Persent | scholar | Panyapiwat Institute of Management</p>
   <p>march - may 2024 | Trainee | 7-Eleven</p>
   <footer>
-    <p>Connect with me on <a href="contact.html"> LinkedIn</a> | <a href="#">GitHub</a></p>
+    <p>Connect with me on <a href="contact.html"> Contact</a> | <a href="https://github.com/Angkn">GitHub</a></p>
   </footer>
 </body>
 
